# arm_pick_and_place

./: CMakeLists.txt  CODE_REVIEW.md  FIXES_SUMMARY.md  HARDWARE_INTEGRATION.md  QUICK_START.md  README.md  TESTING_GUIDE.md  package.xml  项目文档_需求分析与分工.md
config/: params.yaml
docs/superpowers/plans/: 2026-06-18-arm-pick-place-implementation.md
docs/superpowers/specs/: 2026-06-18-arm-pick-place-design.md
launch/: full_system.launch.py  integrated.launch.py
msg/: TaskCommand.msg  TaskStatus.msg
src/arm_controller/: package.xml  setup.py
src/arm_controller/arm_controller/: arm_controller.py  ik_solver.py
src/arm_controller/launch/: arm.launch.py
src/gripper_controller/: package.xml  setup.py
src/gripper_controller/gripper_controller/: gripper_controller.py
src/gripper_controller/launch/: gripper.launch.py
src/pan_tilt_controller/: package.xml  setup.py
src/pan_tilt_controller/launch/: pan_tilt.launch.py
src/pan_tilt_controller/pan_tilt_controller/: __init__.py  pan_tilt_controller.py
src/task_scheduler/: package.xml  setup.py
src/task_scheduler/launch/: task.launch.py
src/task_scheduler/task_scheduler/: states.py  task_scheduler.py
src/vision_node/: package.xml  setup.py
src/vision_node/launch/: vision.launch.py
src/vision_node/vision_node/: vision_node.py
test/: TESTING.md  test_system.py
